[package]
name = "kod"
description = "A code editor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
anyhow = "1"

log = "0.4"
fern = "0.6"

crop = { version = "0.4", features = ["graphemes", "simd"] }

unicode-segmentation = "1"
unicode-display-width = "0.3"

[profile.release]
lto = true
