[package]
name = "kod"
description = "A code editor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
anyhow = "1"

log = "0.4"
fern = "0.7"

crop = { version = "0.4", features = ["graphemes", "simd"] }
smartstring = "1"
regex = "1"

unicode-segmentation = "1"
unicode-display-width = "0.3"
unicode-general-category = "0.6"

once_cell = "1"

bitflags = "2"

[profile.release]
lto = true
