[package]
name = "kod"
author = "muxcmux"
description = "A code editor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
anyhow = "1"

log = "0.4"
fern = "0.7"

crop = { version = "0.4", features = ["graphemes", "simd"] }
smartstring = "1"
regex-cursor = "0.1"
regex = "1"
globset = "0.4"

unicode-segmentation = "1"
unicode-display-width = "0.3"
unicode-general-category = "1"

once_cell = "1"

bitflags = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tree-sitter = "0.23"
hashbrown = { version = "0.14", features = ["raw"] }
slotmap = "1"
ahash = "0.8"

include_dir = "0.7"
walkdir = "2"

[build-dependencies]
anyhow = "1"
cc = "*"
threadpool = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
